--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Big-lapa/assets/favicon.d3efd231.svg" />
+    <link rel="icon" type="image/svg+xml" href="src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/Big-lapa/assets/index.7a62bbe1.js"></script>
-    <link rel="stylesheet" href="/Big-lapa/assets/index.0280ee10.css">
+    <script type="module" crossorigin src="/Big-lapa/assets/index.61c0b3ba.js"></script>
   </head>
   <body>
     <div id="root"></div>
