--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://pay.fondy.eu/static_common/v1/checkout/ipsp.js"></script>
   </body>
 </html>
