--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0"
     />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/Big-lapa/assets/index.166244ee.js"></script>
+    <script type="module" crossorigin src="/Big-lapa/assets/index.38ad21cf.js"></script>
   </head>
   <body>
     <div id="root"></div>
     
+    <script src="https://pay.fondy.eu/static_common/v1/checkout/ipsp.js"></script>
   </body>
 </html>
