deleted fondy/add favicont and title/ fixed dontaion

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0"
     />
-    <title>Vite App</title>
+    <title>ЕКО Захист - Староконстянтинів</title>
+    <link rel="icon" type="image/svg+xml" href="/src/Assets/favicon 2.svg" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script src="https://pay.fondy.eu/static_common/v1/checkout/ipsp.js"></script>
   </body>
 </html>
