--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0"
     />
-    <title>Vite App</title>
-    <script type="module" crossorigin src="/Big-lapa/assets/index.d58d488f.js"></script>
+    <title>ЕКО Захист - Староконстянтинів</title>
+    <link rel="icon" type="image/svg+xml" href="/Big-lapa/assets/favicon 2.3c86849c.svg" />
+    <script type="module" crossorigin src="/Big-lapa/assets/index.428df346.js"></script>
   </head>
   <body>
     <div id="root"></div>
     
-    <script src="https://pay.fondy.eu/static_common/v1/checkout/ipsp.js"></script>
   </body>
 </html>
