--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0"
     />
     <title>ЕКО Захист - Староконстянтинів</title>
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon 2.3c86849c.svg" />
-    <script type="module" crossorigin src="/assets/index.06da60e0.js"></script>
+    <link rel="icon" type="image/svg+xml" href="/Big-lapa/assets/favicon 2.3c86849c.svg" />
+    <script type="module" crossorigin src="/Big-lapa/assets/index.06da60e0.js"></script>
   </head>
   <body>
     <div id="root"></div>
